--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="service1"></div>
-    <div id="service2"></div>
+    <div id="carousal"></div>
+    <div id="schedule-booking"></div>
 
     <script src="bundles/service1.js"></script>
     <script src="bundles/service2.js"></script>
